[#67] Migrate to JDK 16 (#68)